simple relay project updated

--- a/simple-relay/package.json
+++ b/simple-relay/package.json
@@ -11,6 +11,7 @@
     "graphql": "^0.4.2",
     "graphql-relay": "^0.3.0",
     "react": "^0.14.0-beta3",
+    "graphiql": "~0.4.5",
     "react-dom": "^0.14.0-beta3",
     "react-relay": "^0.1.1",
     "react-router": "^1.0.0-beta3"
